--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - cmake
     - make  # [unix]
     - patch  # [unix]
+    - m2-patch  # [win]
   host:
     - boost-cpp
     - zlib
