--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - patch  # [unix]
     - m2-patch  # [win]
   host:
-    - boost-cpp {{ boost_cpp }}
+    - boost-cpp 1.82
     - zlib
   run:
     - boost-cpp
